--- a/public/css/src/common.css
+++ b/public/css/src/common.css
@@ -952,6 +952,7 @@ button:hover {
     top: 8px;
     border: 1px solid;
     border-color: #a4bbe2;
+    border-color: #1a59c3;
     background: white;
     width: 110px;
     height: 40px;
@@ -1942,13 +1943,13 @@ button:hover {
 
 .chat, .notifications-panel {
     top: 55px;
-    box-shadow: -5px 10px 15px 5px rgba(0,0,0,.1);
+    box-shadow: -5px 10px 15px 3px rgba(0, 0, 0, 0.07);
+    border: 1px solid #1a59c3;
+    border-right: none;
 }
 
 .x--corner .chat, .x--corner .notifications-panel {
     top: 70px;
     border-radius: 20px 0 0 0;
-    border: 1px solid #a4bbe2;
-    border-right: none;
     overflow: hidden;
 }
