--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -57,6 +57,8 @@
   <link rel="stylesheet" href="/css/src/friends/friends.css">
   <link rel="stylesheet" href="/css/src/cheers/cheers.css">
   <link rel="stylesheet" href="/css/src/landing/landing.css">
+  <link rel="stylesheet" href="/css/src/landing/landing_v1.css">
+  <link rel="stylesheet" href="/css/src/landing/landing_v2.css">
   <link rel="stylesheet" href="/css/src/menu/menu.css">
   <link rel="stylesheet" href="/css/src/notifications/notifications.css">
   <link rel="stylesheet" href="/css/src/onboarding/onboarding.css">
@@ -739,6 +741,8 @@
   <script src="js/src/pictures/pictures.js"></script>
   <script src="js/src/autologin/autologin.js"></script>
   <script src="js/src/landing/landing.js"></script>
+  <script src="js/src/landing/landing_v1.js"></script>
+  <script src="js/src/landing/landing_v2.js"></script>
   <script src="js/src/admin/admin.js"></script>
   <script src="js/src/analytics/analytics_google.js"></script>
   <script src="js/src/cheers/cheers.js"></script>
