--- a/public/css/src/map/map.css
+++ b/public/css/src/map/map.css
@@ -336,8 +336,8 @@
     font-size: 11px;
     justify-content: center;
     align-items: center;
-    border: 2px solid white;;
-    background-color: black;;
+    border: 2px solid white;
+    background-color: white;
     color: white;
 }
 
