--- a/views/index-dev.html
+++ b/views/index-dev.html
@@ -48,7 +48,7 @@
   
   <!-- App, in any order -->
   <link rel="stylesheet" href="/css/src/ioptions/ioptions.css">
-  <link rel="stylesheet" href="/css/src/before/before.css"> 
+  <link rel="stylesheet" href="/css/src/before/before.css">
   <link rel="stylesheet" href="/css/src/before/before_create.css">
   <link rel="stylesheet" href="/css/src/party/party.css">
   <link rel="stylesheet" href="/css/src/party/party_create.css">
@@ -56,9 +56,6 @@
   <link rel="stylesheet" href="/css/src/chat/chat_inview.css">
   <link rel="stylesheet" href="/css/src/friends/friends.css">
   <link rel="stylesheet" href="/css/src/cheers/cheers.css">
-  <link rel="stylesheet" href="/css/src/landing/landing.css">
-  <link rel="stylesheet" href="/css/src/landing/landing_v1.css">
-  <link rel="stylesheet" href="/css/src/landing/landing_v2.css">
   <link rel="stylesheet" href="/css/src/menu/menu.css">
   <link rel="stylesheet" href="/css/src/notifications/notifications.css">
   <link rel="stylesheet" href="/css/src/onboarding/onboarding.css">
@@ -741,8 +738,6 @@
   <script src="js/src/pictures/pictures.js"></script>
   <script src="js/src/autologin/autologin.js"></script>
   <script src="js/src/landing/landing.js"></script>
-  <script src="js/src/landing/landing_v1.js"></script>
-  <script src="js/src/landing/landing_v2.js"></script>
   <script src="js/src/admin/admin.js"></script>
   <script src="js/src/analytics/analytics_google.js"></script>
   <script src="js/src/cheers/cheers.js"></script>
@@ -791,6 +786,7 @@
   <script src="js/src/ui/ui_bubbles.js"></script>
   <script src="js/src/ui/ui_spotlight.js"></script>
   <script src="js/src/ui/ui_ioptions.js"></script>
+  <script src="js/src/ui/ui_tips.js"></script>
   <script src="js/src/dev/dev.js"></script>
   <script src="js/src/realtime/realtime.js"></script>
   <script src="js/src/init/init.js"></script>
