--- a/public/css/src/landing/landing_v2.css
+++ b/public/css/src/landing/landing_v2.css
@@ -189,7 +189,6 @@
 
 .landing-screenshots img {
   width: 100%;
-  height: 100%;  
 }
 
 
@@ -292,8 +291,12 @@
    }
    
    .landing__screenshot.x--1 {
-     left: auto;
+     left: 0;
      right: 0;
+     bottom: 80px;
+     margin: auto;
+     width: 55%;
+     bottom: 23px;
    }
 
 
@@ -307,12 +310,7 @@
      display: none;
    }
 
-   .landing__screenshot.x--1 {
-     right: auto;
-     left: auto;
-     top: auto;
-     bottom: auto;
-   }
+  
    .landing-screenshots {
       position: absolute;
       top: auto;
@@ -323,8 +321,10 @@
       display: flex;
       justify-content: center;
       align-items: flex-end;
-      width: 70%;
+      width: 100%;
       max-width: 300px;
+      height: 100%;
+      bottom: 0;
    }
 
    .landing-hero {
@@ -340,14 +340,20 @@
       bottom: 74%;
       width: 80%;
       line-height: 30px;
+      left: 0;
+      right: 0;
+      margin: auto;
    }
 
   
    .landing-connexion {
        position: absolute;
        z-index: 5;
-       width: 200px;
+       width: 230px;
        bottom: 72px;
+       left: 0;
+       right: 0;
+       margin: auto;
    }
 
    .landing-publish {
@@ -356,6 +362,10 @@
      font-size: 10px;
      color: white;
      z-index: 1;
+     left: 0;
+     right: 0;
+     margin: auto;
+     text-align: center;
    }
 
  
@@ -375,5 +385,58 @@
      margin: 0 10px;
      font-size: .8em;
    }
+
+    .landing__screenshot.x--1 {
+      bottom: 80px;
+      width: 50%;
+    }
+
+}
+
+
+
+/* iPhone 5/5S Portrait mode  */
+@media only screen 
+  and (min-device-width: 320px) 
+  and (max-device-width: 568px)
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) {
+  
+  .landing__screenshot.x--1 {
+    width: 115px;
+  }
+
+
+}
+
+
+/* iPhone 6 Portrait mode */
+@media only screen 
+  and (min-device-width: 375px) 
+  and (max-device-width: 667px) 
+  and (-webkit-min-device-pixel-ratio: 2)
+  and (orientation: portrait) { 
+    
+  .landing__screenshot.x--1 {
+    width: 62%;
+  }
+
+  .landing-connexion button {
+    width: 90%!important;
+  }
+
+}
+
+
+/* iPhone 6+ Portrait mode */
+@media (min-width: 414px) and (max-width: 736px) { 
+  
+  .landing__screenshot.x--1 {
+    width: 200px;
+  }
+
+  .landing-connexion button {
+    width: 100%!important;
+  }
 
 }
