--- a/public/css/src/common.css
+++ b/public/css/src/common.css
@@ -658,13 +658,13 @@ button:hover .icon-meedrink {
 
 .change-lang__choice.x--active i {
     opacity: 1
-}
+} 
 
 .change-lang__choice i {
     cursor: pointer;
     opacity: .7;
     width: 100%;
-    /* border-radius: 10px 0 10px 0; */
+    border-radius: 16px 0 16px 0;
 }
 
 .change-lang__choice.x--unavailable {
