--- a/public/css/src/onboarding/onboarding.css
+++ b/public/css/src/onboarding/onboarding.css
@@ -1,23 +1,34 @@
 
 .onb-welcome {
+    width: 100%;
+    height: 100%;
+    padding: 50px;
+    box-sizing: border-box;
+}
+.onb-welcome-body {
+    background: white;
+    height: 100%;
+    width: 100%;
+    max-width: 900px;
+    border-radius: 20px;
     display: flex;
-    flex-flow: column;
-    color: white;
     justify-content: center;
     align-items: center;
+    flex-flow: column nowrap;
 }
 .onb-welcome__icon {
-    font-size: 70px;
+    font-size: 50px;
     width: 100px;
     height: 100px;
-    border: 2px solid rgb(218, 152, 255);
-    color: rgb(218, 152, 255);
-    padding: 20px;
-    margin-bottom: 30px;
+    color: rgb(220, 220, 220);
+    padding: 0px;
+    margin-bottom: 0px;
+    flex-shrink: 0;
+    margin-bottom: 20px;
 }
-.onb-welcome__icon i {}
-.onb-welcome__title {font-family: 'creamy';font-size: 60px;margin-bottom: 30px;}
-.onb-welcome__title span {}
+.onb-welcome__icon img { width: 100%; }
+.onb-welcome__title {font-family: 'creamy';font-size: 60px;margin-bottom: 10px;}
+.onb-welcome__title span {font-family: 'quenda';font-size: 40px;font-weight: bold;}
 .onb-welcome__subtitle {
     font-size: 14px;
     line-height: 30px;
@@ -25,17 +36,18 @@
     width: 90%;
     margin-bottom: 40px;
 }
-.onb-welcome__subtitle span {}
+
 .onb-welcome__footer {
     width: 250px;
     height: 50px;
-    border: 2px solid;
+    border-radius: 100px;
+    background: #1a59c3;
 }
 .onb-welcome__footer button {
     width: 100%;
     height: 100%;
     background: none;
-    color: #f5bfa1;
     font-size: 16px;
     font-family: 'quenda';
+    color: white;
 }
