--- a/public/css/src/before/before.css
+++ b/public/css/src/before/before.css
@@ -158,7 +158,6 @@ span.be-dates__count {
     background: white;
     width: 100%;
     height: 100%;
-    max-height: 630px;
     display: flex;
     flex-flow: column;
     z-index: 10;
@@ -763,10 +762,12 @@ span.be-dates__count {
     font-size: 12px;
     font-family: quenda;
     order: 1;
-    width: 80%;
+    width: 90%;
     align-items: center;
     flex-flow: row wrap;
     margin: 0 auto;
+    overflow: hidden;
+    overflow-y: scroll;
 }
 .be-inview__hashtag {
     padding: 6px 12px;
